--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SYNTH3SIS-MRSC</title>
+    <title>SYNTH3SIS-MRSC-X</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;700&display=swap');
         
+        :root {
+            --bg-deep: #020617;
+            --accent-cyan: #22d3ee;
+            --accent-blue: #3b82f6;
+            --glass-border: rgba(34, 211, 238, 0.1);
+        }
+
         body {
-            font-family: 'Inter', sans-serif;
-            background-color: #0f172a;
+            font-family: 'Plus Jakarta Sans', sans-serif;
+            background-color: var(--bg-deep);
             color: #f8fafc;
             margin: 0;
             overflow-x: hidden;
+            letter-spacing: -0.01em;
         }
 
         .mono {
@@ -22,39 +30,55 @@
         }
 
         ::-webkit-scrollbar {
-            width: 8px;
+            width: 6px;
         }
 
         ::-webkit-scrollbar-track {
-            background: rgba(15, 23, 42, 0.1);
+            background: #020617;
         }
 
         ::-webkit-scrollbar-thumb {
-            background: rgba(148, 163, 184, 0.2);
-            border-radius: 4px;
-        }
-
-        ::-webkit-scrollbar-thumb:hover {
-            background: rgba(148, 163, 184, 0.3);
+            background: rgba(34, 211, 238, 0.2);
+            border-radius: 10px;
         }
 
         .glass-panel {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(8px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            background: rgba(15, 23, 42, 0.6);
+            backdrop-filter: blur(12px);
+            border: 1px solid var(--glass-border);
+            box-shadow: 0 4px 24px -1px rgba(0, 0, 0, 0.2);
         }
 
-        .glow-cyan {
-            box-shadow: 0 0 20px rgba(6, 182, 212, 0.2);
+        .circuit-bg {
+            background-image: radial-gradient(circle at 2px 2px, rgba(34, 211, 238, 0.05) 1px, transparent 0);
+            background-size: 24px 24px;
         }
 
-        @keyframes pulse-slow {
-            0%, 100% { opacity: 0.3; }
-            50% { opacity: 0.6; }
+        .text-glow {
+            text-shadow: 0 0 12px rgba(34, 211, 238, 0.4);
+        }
+
+        @keyframes pulse-cyan {
+            0%, 100% { opacity: 0.4; filter: blur(80px); }
+            50% { opacity: 0.7; filter: blur(100px); }
         }
 
         .animate-pulse-slow {
-            animation: pulse-slow 3s ease-in-out infinite;
+            animation: pulse-cyan 4s ease-in-out infinite;
+        }
+
+        @keyframes scanline {
+            0% { transform: translateY(-100%); }
+            100% { transform: translateY(100%); }
+        }
+
+        .scanline::after {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(to bottom, transparent, rgba(34, 211, 238, 0.05), transparent);
+            animation: scanline 8s linear infinite;
+            pointer-events: none;
         }
     </style>
 <script type="importmap">
@@ -70,7 +94,7 @@
 }
 </script>
 </head>
-<body>
+<body class="circuit-bg">
     <div id="root"></div>
 </body>
 </html>
